# 13_lesson

./: .gitignore  pyproject.toml  readme.md
src/: main.py
src/data/: currency_symbols.json
src/utils/: functions.py
